Added temperature class. Updated systemd service to auto-restart.

--- a/rpi_sensor.service
+++ b/rpi_sensor.service
@@ -4,6 +4,7 @@ After=network-online.target
 
 [Service]
 # replace user with an existing system user
+Restart=always
 User=pi
 ExecStart=/usr/bin/python /usr/local/bin/rpi_sensor_event_loop.py
 
