--- a/celery.conf
+++ b/celery.conf
@@ -25,4 +25,4 @@ CELERYD_OPTS="--concurrency=1"
 #   and is important when using the prefork pool to avoid race conditions.
 CELERYD_PID_FILE="/var/run/celery/%n.pid"
 CELERYD_LOG_FILE="/opt/celery/%n%I.log"
-CELERYD_LOG_LEVEL="INFO"
+CELERYD_LOG_LEVEL="DEBUG"
