Updated celery conf

--- a/celery.conf
+++ b/celery.conf
@@ -26,3 +26,6 @@ CELERYD_OPTS="--concurrency=1"
 CELERYD_PID_FILE="/var/run/celery/%n.pid"
 CELERYD_LOG_FILE="/opt/celery/%n%I.log"
 CELERYD_LOG_LEVEL="DEBUG"
+
+# setting redis visibility timeout to 7 days trying to address duplicate celery tasks being created
+# broker_transport_options = {'visibility_timeout': 604800} 
