--- a/video_transcode/config/celery.conf
+++ b/video_transcode/config/celery.conf
@@ -10,7 +10,7 @@ CELERY_BIN="/home/kirby/.pyenv/versions/video-transcode/bin/celery"
 
 # App instance to use
 # comment out this line if you don't use an app
-CELERY_APP="video-transcode"
+CELERY_APP="video-transcode.video-transcode"
 # or fully qualified:
 #CELERY_APP="proj.tasks:app"
 
