--- a/video_transcode/config/config.yaml
+++ b/video_transcode/config/config.yaml
@@ -1,6 +1,6 @@
 CELERY_BROKER: redis://localhost:6379/0
 CELERY_QUEUE: video-transcode
-CELERY_WORKER_NAME: w1@brains.lan
+CELERY_WORKER_NAME: w1@brains
 PLEX_LIBRARY_FOLDER: /home/plex
 COMCUT_BINARY_PATH: /usr/local/bin/comcut
 FFMPEG_BINARY_PATH: ffmpeg
