Added docker setups.

--- a/video_transcode/config/celery.conf
+++ b/video_transcode/config/celery.conf
@@ -4,8 +4,11 @@ CELERYD_NODES="w1"
 # or we could have three nodes:
 #CELERYD_NODES="w1 w2 w3"
 
+CELERY_HOSTNAME="brains"
+
 # Absolute or relative path to the 'celery' command:
-CELERY_BIN="/home/kirby/.pyenv/versions/video-transcode/bin/celery"
+# CELERY_BIN="/home/kirby/.pyenv/versions/video-transcode/bin/celery"
+CELERY_BIN="celery"
 #CELERY_BIN="/virtualenvs/def/bin/celery"
 
 # App instance to use
@@ -15,7 +18,8 @@ CELERY_APP="video_transcode"
 #CELERY_APP="proj.tasks:app"
 
 # How to call manage.py
-CELERYD_MULTI="multi"
+# CELERYD_MULTI="multi"
+CELERYD_MULTI="worker"
 
 # Extra command-line arguments to the worker
 CELERYD_OPTS="--concurrency=1"
@@ -23,8 +27,8 @@ CELERYD_OPTS="--concurrency=1"
 # - %n will be replaced with the first part of the nodename.
 # - %I will be replaced with the current child process index
 #   and is important when using the prefork pool to avoid race conditions.
-CELERYD_PID_FILE="/var/run/celery/%n.pid"
-CELERYD_LOG_FILE="/opt/celery/%n%I.log"
+CELERYD_PID_FILE="/var/run/video_transcode/%n.pid"
+CELERYD_LOG_FILE="/opt/video_transcode/%n%I.log"
 CELERYD_LOG_LEVEL="DEBUG"
 
 # setting redis visibility timeout to 7 days trying to address duplicate celery tasks being created
