Documenting config files.

--- a/video_transcode/config/celery.conf
+++ b/video_transcode/config/celery.conf
@@ -22,6 +22,8 @@ CELERY_APP="video_transcode"
 CELERYD_MULTI="worker"
 
 # Extra command-line arguments to the worker
+# concurrency=1 limits celery to one task executing at a time. ffmpeg will use the majority
+# of CPU cores by default. Set this value higher only if using GPU transcoding.
 CELERYD_OPTS="--concurrency=1"
 
 # - %n will be replaced with the first part of the nodename.
